# rust-spa-server

./: Cargo.toml  Dockerfile  README.md
frontend/: index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/model/: unit.ts
frontend/src/router/: index.ts
frontend/src/service/: rest.ts
frontend/src/stores/: counter.ts  unitstore.ts
frontend/src/views/: About.vue  Units.vue
frontend/src/workers/: worker.ts
src/: data.rs  lib.rs  main.rs  mod.rs  store.rs  unit.rs  units.rs  version.rs
tests/: units_test.rs
