[package]
name = "rust-spa-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.1"
actix-web = "4"
rust-embed="6.4.1"
axum = "0.5.16"
spa-rs = "0.3.1"
anyhow = "1.0.65"
# tokio = "1.21.1"
tokio = { version = "1.21.1", features = ["full"] }
