[package]
name = "rust_spa_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.1"
actix-web = "4"
rust-embed="6.4.1"
axum = "0.5.16"
spa-rs = "0.3.1"
anyhow = "1.0.65"
# tokio = "1.21.1"
tokio = { version = "1.21.1", features = ["full"] }
once_cell = "1.15.0"
# serde = "1.0.145"
# serde_json = "1.0.79" # Serde serializion/deserialization of JSON data.
serde = { version = "1.0.136", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "1.0.79" # Serde serializion/deserialization of JSON data.
parking_lot = "0.12.1"
axum-sqlite = "0.1.0"
axum-macros = "0.2.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
serde_with = "2.0.1"